# daily

./: UPDATE_LOG.md  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
scripts/: update.mjs  updater.mjs
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AddBill.vue  AddUser.vue  SearchBill.vue  SummerLog.vue
src/hooks/: admin.js  api.js  apiA.js  bill.js  login.js  user.js
src/router/: index.js
src/views/: AdminView.vue  HomeView.vue  LoginView.vue  OpenView.vue
~/.tauri/: omb.key  omb.key.pub
